fixing some layout issues that were introduced when migrating to bootstrap 4

--- a/Frontend/ClientApp/src/app/albumdetails/albumdetails.component.less
+++ b/Frontend/ClientApp/src/app/albumdetails/albumdetails.component.less
@@ -1,6 +1,9 @@
 .album-details{
-
+    width: 100%;
     font-family: 'Montserrat', sans-serif;
+}
+.album-container{
+    width: 100%;
 }
 .cover-image{
 
